[gd_scene load_steps=9 format=3 uid="uid://tv8a6n2q7r0q"]

[ext_resource type="Script" uid="uid://6dbrff18urv0" path="res://scripts/weapon/huntingrifle/muzzle.gd" id="1_5o8p8"]
[ext_resource type="Script" uid="uid://c0tdg8kowsei" path="res://scripts/weapon/huntingrifle/huntingriflelogic.gd" id="1_am383"]
[ext_resource type="PackedScene" uid="uid://0sbbpi8l56s6" path="res://scenes/inWorld/muzzle_flash.tscn" id="3_laq4c"]
[ext_resource type="AudioStream" uid="uid://dhnhou3b6vk30" path="res://assets/sound/soundfx/weapon/huntingrifle/shotSound.wav" id="4_327d7"]
[ext_resource type="Script" uid="uid://cu8iv2j76nlx0" path="res://scripts/weapon/huntingrifle/huntingriflesound.gd" id="4_726r5"]
[ext_resource type="AudioStream" uid="uid://dh2nyvky3wsis" path="res://assets/sound/soundfx/weapon/huntingrifle/reloadSound.wav" id="5_726r5"]

[sub_resource type="BoxMesh" id="BoxMesh_laq4c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_327d7"]

[node name="HuntingRifle_INHAND" type="Node3D"]
script = ExtResource("1_am383")

[node name="Graphics" type="Node3D" parent="."]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 0, 0, 0)

[node name="CSGMesh3D" type="CSGMesh3D" parent="Graphics"]
transform = Transform3D(2.1, 0, 0, 0, 0.15, 0, 0, 0, 0.162, 0, 0, 0)
mesh = SubResource("BoxMesh_laq4c")
material = SubResource("StandardMaterial3D_327d7")

[node name="CSGMesh3D2" type="CSGMesh3D" parent="Graphics"]
transform = Transform3D(0.294, 0, 0, 0, 0.5301, 0, 0, 0, 0.162, -0.585617, -0.3, -0.00135899)
mesh = SubResource("BoxMesh_laq4c")
material = SubResource("StandardMaterial3D_327d7")

[node name="MuzzleNode" type="Node3D" parent="."]
script = ExtResource("1_5o8p8")
flashModel = ExtResource("3_laq4c")

[node name="Muzzle" type="Marker3D" parent="MuzzleNode"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.3, 0.182563, -0.0418101)

[node name="Timer" type="Timer" parent="MuzzleNode"]
wait_time = 0.2

[node name="soundManager" type="Node3D" parent="."]
script = ExtResource("4_726r5")

[node name="shoot" type="AudioStreamPlayer2D" parent="soundManager"]
stream = ExtResource("4_327d7")

[node name="reload" type="AudioStreamPlayer2D" parent="soundManager"]
stream = ExtResource("5_726r5")

[node name="debug_label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 2

[connection signal="timeout" from="MuzzleNode/Timer" to="MuzzleNode" method="_on_timer_timeout"]
